--- a/client/src/constants/header/header.css
+++ b/client/src/constants/header/header.css
@@ -22,35 +22,14 @@
   display: flex;
   margin-left: auto;
   flex-direction: row;
+  text-decoration: none;
 }
 
-.header-input {
-  padding: 10px 20px;
-  border: 1px solid #fafafa4d;
-  border-radius: 1000px;
+.header-right h5{
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  color: #fafafa;
-  background-color: hsl(203, 38%, 8%);
-  max-width: 114px;
-  transition: max-width 250ms ease-in-out;
-}
-
-.header-input:focus {
-  max-width: 150px;
-}
-
-.header-input::placeholder {
-  font-weight: 600;
-  color: rgba(250, 250, 250, 1);
-}
-
-.header-input:hover,
-.header-input:focus {
-  border: 1px solid #a1d737;
-  color: #a1d737;
-  outline: 1px solid #a1d737;
+  font-size: 14px;
+  color: #ffff;
 }
 
 @media screen and (max-width: 350px) {
