--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -21,7 +21,7 @@
   margin-right: auto;
 }
 .character-img {
-  width: 100%;
+  width: 100%!important;
   height: auto;
   display: block;
   margin-bottom: 5px;
@@ -47,6 +47,37 @@
 
 .character-container a {
   text-decoration: none;
+}
+
+.characters-form {
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100px;
+}
+.character-search {
+  padding: 10px 20px;
+  border: 1px solid #fafafa4d;
+  border-radius: 1000px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+  color: #fafafa;
+  background-color: #a1d737;
+  width: 90%; font-family: "Montserrat", sans-serif;
+}
+
+.character-search::placeholder {
+  font-weight: 600;
+  color: rgba(250, 250, 250, 1);
+}
+
+.character-search:hover,
+.character-search:focus {
+  border: 1px solid #000000;
+  color: #000000;
+  outline: 1px solid #000000;
 }
 
 @media screen and (max-width: 768px) {
@@ -80,6 +111,7 @@
     list-style: none;
     padding: 0;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
   }
 }
